// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useBoundingClientRect renders as expected 1`] = `
<div>
  <span>
    no client rect
  </span>
</div>
`;

exports[`useBoundingClientRect when the container is resized renders as expected 1`] = `
<TestComponent>
  <div>
    <span>
      ,
      ,
      0
      ,
      0
    </span>
  </div>
</TestComponent>
`;
